[gd_scene load_steps=26 format=2]

[ext_resource path="res://World/magpie-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://People/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Magpie.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 260, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 340, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Flying",
"speed": 21.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 37.0

[sub_resource type="CircleShape2D" id=15]

[node name="Magpie" type="KinematicBody2D"]
script = ExtResource( 3 )
FRICTION = 1000
ACCELERATION = 1000
MAX_SPEED = 200
DEFAULT_MAX_SPEED = 200
RUN_SPEED = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = SubResource( 13 )
animation = "Flying"
frame = 4
playing = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="WanderTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 15 )
disabled = true
[connection signal="interact_started" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_interact_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]

[editable path="PlayerDetectionZone"]
